<!--
    Tanggal Pengerjaan : 26 April 2023
    NIM  : 10120768
    Nama : Syifaul Mukminin
    Kelas: IF9
-->
<resources>
    <string name="app_name">Bloodshare_10120768</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="connect_fb">CONNECT WITH FACEBOOK</string>
    <string name="asktoregist">"doesn't have account?"</string>
    <string name="regis">Register</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood">Blood Type</string>
    <string name="rhesus">Rhesus</string>
    <string name="retype_pass">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="job">Job</string>
    <string name="address">Home Adress</string>
    <string name="loc">Default Location</string>
    <string name="terms">Agree with Terms and Conditions</string>
    <string name="almost">Almost There</string>
    <string name="sub_almost">Thank you for registering with us. One more step, you need to check your email to active your account</string>
    <string name="verify">VERIFY</string>
    <string name="verif">Verify your Account</string>
    <string name="sub_verif">We have send verification code to your email</string>
    <string name="enter_verif">enter verification code here...</string>
    <string name="btnSend">SEND</string>
    <string name="askToResend">"doesn't get the code?"</string>
    <string name="resend">Resend</string>
    <string name="nama">Syifaul Mukminin</string>
    <string name="blood_type">Blood type : B</string>
    <string name="give">BLOOD GIVE</string>
    <string name="received">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search">Search Donor</string>
    <string name="near">Search Donor Near You</string>
    <string name="needed">Blood Needed</string>
    <string name="user_need">4 Users need blood</string>
    <string name="msg">Message</string>
    <string name="msg_notif">5 New Messages</string>
    <string name="history">Donor History</string>
    <string name="donor_his">5 Gives, 2 Received</string>
</resources>