<?xml version="1.0" encoding="utf-8"?>
<!--
    Tanggal Pengerjaan : 27 April 2023
    NIM  : 10120768
    Nama : Syifaul Mukminin
    Kelas: IF9
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verif"
            android:textColor="@color/white"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/sub_verif"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextText12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_verif"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:paddingVertical="18dp"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:backgroundTint="@color/light_blue"
            android:padding="12dp"
            android:text="@string/btnSend"
            android:clickable="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="5dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:inputType="text"
                android:paddingVertical="18dp"
                android:text="@string/askToResend"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resend"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>