<?xml version="1.0" encoding="utf-8"?>
<!--
    Tanggal Pengerjaan : 26 April 2023
    NIM  : 10120768
    Nama : Syifaul Mukminin
    Kelas: IF9
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_welcome_logo" />

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="text"
                android:paddingVertical="18dp"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:hint="@string/username"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="text"
                android:paddingVertical="18dp"
                android:hint="@string/pass"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:background="@drawable/customborder"
                android:id="@+id/button"
                android:clickable="false"
                android:layout_marginTop="17dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="15dp"/>


            <LinearLayout
                android:id="@+id/linLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/customborder">

                <ImageButton
                    android:layout_marginEnd="10dp"
                    android:id="@+id/fb_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_welcome_fb_login" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/connect_fb"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/asktoregist"
                    android:textColor="@color/white"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:text="@string/regis"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:onClick="btnRegister"
                    android:textSize="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>